check if there are rows in DB -> if no request to API and save in DB
